js/js.translator/testData/incremental/invalidation/crossModuleObjectInitialization/lib1/l1.0.kt
object X {
    var result = "0"
}
